# dirhamlyApp

./: Justfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.md  feature-request.yml
packaging/aur/: .SRCINFO  PKGBUILD  dirhamly-0.3.5-1-x86_64.pkg.tar.zst  dirhamly-0.3.5-2-x86_64.pkg.tar.zst  dirhamly-debug-0.3.5-1-x86_64.pkg.tar.zst
packaging/aur/pkg/dirhamly/: .BUILDINFO  .MTREE  .PKGINFO
packaging/aur/pkg/dirhamly/usr/share/applications/: dirhamly.desktop
packaging/aur/src/: dirhamly-0.3.5.AppImage  dirhamly.desktop
packaging/aur/src/squashfs-root/: .DirIcon  dirhamly.desktop
packaging/aur/src/squashfs-root/usr/share/applications/: dirhamly.desktop
packaging/scripts/: install.sh  uninstall.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  model.rs  tauricmd.rs
src/components/ui/: tabBar.tsx  text.tsx
src/components/ui/diUi/: diBar.tsx  themetoggler.tsx  txButton.tsx
src/components/ui/layout/: Mainlayout.tsx  WindowTab.tsx
src/components/ui/profile/: appearance.tsx  main.tsx
src/dashboard/: chart.tsx  maindashboard.tsx  piechart.tsx  table.tsx
src/lib/: Refreshcontext.tsx  currency.ts  theme.tsx  txop.ts  txop.tsx
src/pages/Transactions/: main.tsx
src/pages/dashboard/: main.tsx
src/pages/dashboard/service/: dashservice.ts  table.ts
src/pages/dashboard/widgets/: chart.tsx  dashheader.tsx  deletedata.tsx  piechart.tsx  sumdata.tsx  table.tsx  tablecolumes.tsx  tabledata.tsx
src/profile/: appearnce.tsx  mainsetting.tsx
src/routes/: index.tsx
