[package]
name = "dirhamly"
version = "0.1.5"
description = "A modern and efficient cross platform app for tracking your expenses and managing your budget."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dirhamly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# add new
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2.19"
rusqlite = "0.38.0"
rust_decimal = { version = "1.3", features = ["serde-str"] }
rust_decimal_macros = "1.40.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
# typst-bake = "0.1.6"

