[package]
name = "dirhamly"
version = "0.1.5"
description = "A modern and efficient cross platform app for tracking your expenses and managing your budget."
authors = ["you"]
edition = "2021"

[lib]
name = "dirhamly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2.19"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust_decimal = { version = "1.3", features = ["serde-str"] }
rust_decimal_macros = "1.40.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"

# ====================== OPTIMIZED RELEASE PROFILE ======================
[profile.release]
opt-level = "s"          # "s" = size optimized, "z" = even smaller, 3 = speed
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
